Removed spring boot jpa stuff (no need to connect to db)

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.0'
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile group: 'org.apache.tomcat', name: 'tomcat-util', version: '8.5.5'
 }
 
 task wrapper(type: Wrapper) {
