--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        maven { url 'http://ia-resolver/artifactory/repo' }
+        mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:$bootVersion")
@@ -9,10 +9,9 @@ buildscript {
 
 apply plugin: 'groovy'
 apply plugin: 'maven'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 repositories {
-    maven { url 'http://ia-resolver/artifactory/repo' }
     mavenCentral()
     maven {url 'https://repo.spring.io/libs-release'}
 }
@@ -26,6 +25,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     compile group: 'org.apache.tomcat', name: 'tomcat-util', version: '8.5.5'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.0'
+
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-4'
 }
 
 task wrapper(type: Wrapper) {
