--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.0'
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
-    compile group: 'org.apache.tomcat', name: 'tomcat-util', version: '8.5.5'
+   // compile group: 'org.apache.tomcat', name: 'tomcat-util', version: '8.5.5'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.0'
 
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-4'
