--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
    // compile group: 'org.apache.tomcat', name: 'tomcat-util', version: '8.5.5'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.0.0'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
+    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
 
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-4'
 }
